--- a/ChromeReader/ChromeReader/popup.css
+++ b/ChromeReader/ChromeReader/popup.css
@@ -1,8 +1,8 @@
 body
 {
     font: menu;
-    min-width: 15em;
-    min-height: 5.5em;
+    min-width: 17em;
+    /*min-height: 5.5em;*/
     margin: 0.3em;
 }
 
@@ -17,7 +17,7 @@ h1
     width: 6em;
     float: right; 
     text-align: right;
-    padding: 0.3em 0;
+    padding: 0.2em 0 0 0;
 }
 
 button
@@ -32,12 +32,14 @@ label
 {
     width: 3em;
     float: left;
-    padding: 0.2em 0;
+    padding: 0.1em 0;
+    margin: 0;
 }
 
 input 
 { 
     width: 100%; 
+    margin: 0;
 }
 
 .row 
