--- a/css/popup.css
+++ b/css/popup.css
@@ -1,3 +1,12 @@
+body
+{
+    min-width: 17em;
+    margin: 0.3em;
+    
+    cursor:default;
+    -webkit-user-select:none;
+}
+
 #remove
 {
     width: 6em;
