--- a/css/popup.css
+++ b/css/popup.css
@@ -18,15 +18,15 @@ h1
     font-weight: normal;
 }
 
-#remove
+.right
 {
-    width: 6em;
+    min-width: 1em;
     float: right; 
     text-align: right;
     padding: 0.2em 0 0 0;
 }
 
-#folders
+#folders ul
 {
     margin: 0;
     padding: 0;
