--- a/css/popup.css
+++ b/css/popup.css
@@ -26,6 +26,12 @@ h1
     padding: 0.2em 0 0 0;
 }
 
+#connecting
+{
+    background: url('../png/throbber.gif') no-repeat left center;
+    padding-left: 20px;
+}
+
 #folders ul
 {
     margin: 0;
